[webvtt] crash on jump
Steps to reproduce:
- Open mp4 file.
- Open subtitles file.
- Jump on timeline
Subtitles file content:
WEBVTT
.1
00:01:10,113 --> 00:01:10,500
.
Thread 20 "vlc" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fff92d3e700 (LWP 22527)] 0x00007fff3bdea8b6 in Control (p_demux=0x7fff8d51d340, i_query=772, args=0x7fff92d3db70) at demux/webvtt.c:444 444 p_sys->index.p_array[p_sys->index.i_current].time;