demux: webvtt: fix set_time null deref with no valid cues (fix #22448)

(cherry picked from commit 13408f65758f3bfb11761535df8e44c4c28e04d4)